<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:appname="http://schemas.android.com/apk/res-auto" >

<item android:id="@+id/search"
    android:icon="@drawable/ic_search_black_24dp"
    android:title="search_title"
    appname:showAsAction = "always|collapseActionView"
    appname:actionViewClass="android.widget.SearchView"> </item>

    </menu>

