<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Activities.MainActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/tool"
        >
    </include>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/country_item" />
</LinearLayout>