...
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="24dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="Greece"
            android:textAlignment="center"
...
